# security_agent

./: .gitignore  CMakeLists.txt  README.md  config.yaml  todo.txt
config/: detection_rules.json  suspicious_processes.json
include/modules/behavior/: behavior_module.hpp
include/modules/config/: config_reader.hpp
include/modules/detection/: detection_module.hpp
include/modules/event_management/: event.hpp  event_manager.hpp
include/modules/logging/: logging_module.hpp
include/modules/monitoring/: file_monitoring.hpp  monitoring_interface.hpp  network_monitoring.hpp  process_monitoring.hpp  syslog_monitoring.hpp
include/modules/response/: response_module.hpp
include/modules/routing/: routing_module.hpp
include/utils/: base64.h
src/: main.cpp
src/modules/config/: config_reader.cpp
src/modules/detection/: detection_module.cpp
src/modules/event_management/: event.cpp  event_manager.cpp
src/modules/logging/: logging_module.cpp
src/modules/monitoring/: file_monitoring.cpp  monitoring_interface.cpp  network_monitoring.cpp  process_monitoring.cpp  syslog_monitoring.cpp
src/modules/response/: response_module.cpp
src/modules/routing/: routing_module.cpp
src/utils/: base64.cpp
tests/modules/event_management/: event_manager_test.cpp  event_test.cpp
tests/modules/logging/: logging_module_test.cpp
tests/modules/monitoring/: file_monitoring_test.cpp  network_monitoring_test.cpp  process_monitoring_test.cpp  syslog_monitoring_test.cpp
tests/modules/response/: response_module_test.cpp
tests/modules/routing/: routing_module_test.cpp
